Porting #744 to master (#755)
* #742 - model and backend code for supporting multiple check-ins

* #742 - cast ZonedDateTime to timestamp in order to truncate it
fix logged event (use BADGE_SCAN instead of CHECK_IN)

* #742 - add check-in strategy to category_with_currency

* #742 - add integration test

* #742 - fix test

* #742 add ticket validity check for badge scan

* #742 include check-in strategy in the encrypted payload for Alf.io-PI
include badge scanning auditing in the check-in log

* #742 include ticket validity start/end (if present) in the encrypted payload for Alf.io-PI

* fix test

* #744 - M2 backoffice